--- a/node/package.json
+++ b/node/package.json
@@ -11,9 +11,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.7",
+    "bootstrap": "^5.3.3",
     "cors": "^2.8.5",
     "express": "^4.18.3",
     "mysql2": "^3.9.2",
+    "react-router-dom": "^6.22.2",
     "sequelize": "^6.37.1"
   }
 }
